# docs/swagger.json
@@ -34,13 +34,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse400"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse500"
                         }
                     }
                 }
@@ -55,6 +55,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "default": 1,
                         "description": "ID подписки",
                         "name": "id",
                         "in": "path",
@@ -71,19 +72,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse400"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse404"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse500"
                         }
                     }
                 }
@@ -98,12 +99,14 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "11111111-1111-1111-1111-111111111111",
                         "description": "ID пользователя",
                         "name": "user_id",
                         "in": "query"
                     },
                     {
                         "type": "string",
+                        "default": "Netflix",
                         "description": "Название сервиса",
                         "name": "service_name",
                         "in": "query"
@@ -122,13 +125,13 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse404"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse500"
                         }
                     }
                 }
@@ -143,6 +146,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "default": 1,
                         "description": "ID подписки",
                         "name": "id",
                         "in": "path",
@@ -159,19 +163,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse400"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse404"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse500"
                         }
                     }
                 }
@@ -186,6 +190,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "11111111-1111-1111-1111-111111111111",
                         "description": "ID пользователя",
                         "name": "user_id",
                         "in": "query",
@@ -193,6 +198,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "Netflix",
                         "description": "Название сервиса",
                         "name": "service_name",
                         "in": "query",
@@ -225,13 +231,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse400"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse500"
                         }
                     }
                 }
@@ -249,6 +255,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "default": 1,
                         "description": "ID подписки",
                         "name": "id",
                         "in": "path",
@@ -274,19 +281,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse400"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse404"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/swagger.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse500"
                         }
                     }
                 }
@@ -294,12 +301,30 @@
         }
     },
     "definitions": {
-        "swagger.ErrorResponse": {
+        "swagger.ErrorResponse400": {
             "type": "object",
             "properties": {
                 "error": {
                     "type": "string",
-                    "example": "failed to bind json"
+                    "example": "invalid {id/request/json}"
+                }
+            }
+        },
+        "swagger.ErrorResponse404": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "record not found in db"
+                }
+            }
+        },
+        "swagger.ErrorResponse500": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "failed to {create/find/update/delete} record in db"
                 }
             }
         },
@@ -312,7 +337,7 @@
                 },
                 "message": {
                     "type": "string",
-                    "example": "created"
+                    "example": "{created/updated/deleted}"
                 }
             }
         },
@@ -340,10 +365,6 @@
         "swagger.SubscriptionResponse": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string",
-                    "example": "2025-07-26T12:34:56Z"
-                },
                 "id": {
                     "type": "integer",
                     "example": 1
@@ -360,10 +381,6 @@
                     "type": "string",
                     "example": "07-2025"
                 },
-                "updated_at": {
-                    "type": "string",
-                    "example": "2025-07-26T12:34:56Z"
-                },
                 "user_id": {
                     "type": "string",
                     "example": "11111111-1111-1111-1111-111111111111"
@@ -375,7 +392,7 @@
             "properties": {
                 "sum_price": {
                     "type": "integer",
-                    "example": 2997
+                    "example": 999
                 }
             }
         },
